<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090909"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="edu.cs.sm.RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="#36FBE5"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5A5757"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:hint="@string/full_name"
        android:textColorHint="@android:color/holo_red_light"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="#5A5757"
        android:hint="Email"
        android:textColorHint="@android:color/holo_red_light"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="#5A5757"
        android:textSize="20dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/holo_red_light"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="#5A5757"
        android:hint="@string/confirm_password"
        android:textColorHint="@android:color/holo_red_light"
        android:inputType="textPassword"
        android:padding="10dp" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#AC2E02"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Already have an account? Login"
        android:textSize="15dp"
        android:textColor="#36FBE5"
        android:textStyle="bold"
        />


</LinearLayout>
